examples/lab4/ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "eks-alb-testing-deployment"
spec:
  selector:
    matchLabels:
      app: "eks-alb-testing-web"
  replicas: 1
  template:
    metadata:
      labels:
        app: "eks-alb-testing-web"
    spec:
      containers:
      - name: nginx
        imagePullPolicy: Always
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
