examples/lab4/ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "eks-alb-testing-web-service"
spec:
  selector:
    app: "eks-alb-testing-web"
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
